# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nat-agent-worker"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "xr-ai-agent",
    "pipecat-ai",
    "numpy>=1.24",
    "scipy>=1.11",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "fastmcp>=0.4",
    "nvidia-nat[langchain,mcp]>=1.6",
    "langchain-openai>=0.1",
]

[tool.uv.sources]
xr-ai-agent = { path = "../../../agent-sdk", editable = true }

[project.scripts]
nat_agent_worker = "nat_agent_worker:run"

[tool.hatch.build.targets.wheel]
only-include = [
    "nat_agent_worker.py",
    "agent.py",
    "audio.py",
    "config.py",
    "nat_backend.py",
    "processors.py",
    "services.py",
    "transport.py",
]
