# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "room-tour-example-worker"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "xr-ai-agent",
    "xr-ai-logging",
    "xr-ai-models",
    "xr-ai-pipecat",
    "numpy>=1.24",
    "Pillow>=10.0",
    "pyyaml>=6.0",
]

# OPTIONAL monocular pose backbone (worker/pose_provider.py). The base agent is
# pose-free; install this extra only to enable true geometric bearings. The
# vendored SLAM code + model weights are supplied out-of-tree via
# MONO_SLAM_WORKSPACE (they carry their own torch build); this extra pulls just
# the pip-installable runtime deps the adapter needs.
[project.optional-dependencies]
pose = [
    "torch>=2.1",
    "opencv-python>=4.8",
]

[tool.uv.sources]
xr-ai-agent   = { path = "../../../agent-sdk", editable = true }
xr-ai-logging = { path = "../../../utils/xr-ai-logging", editable = true }
xr-ai-models  = { path = "../../../agent-sdk/xr-ai-models", editable = true }
xr-ai-pipecat = { path = "../../../agent-sdk/xr-ai-pipecat", editable = true }

[project.scripts]
room_tour_example_worker = "room_tour_example_worker:run"

[tool.hatch.build.targets.wheel]
only-include = [
    "room_tour_example_worker.py",
    "agent.py",
    "pixels.py",
    "pose_provider.py",
    "textslam",
]
