# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-vlm-example-worker"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "xr-ai-agent",
    "xr-ai-conversation",
    "xr-ai-logging",
    "xr-ai-models",
    "xr-ai-voicegate",
    "numpy>=1.24",
    "Pillow>=10.0",
    "pyyaml>=6.0",
]

[tool.uv.sources]
xr-ai-agent        = { path = "../../../agent-sdk", editable = true }
xr-ai-conversation = { path = "../../../agent-sdk/xr-ai-conversation", editable = true }
xr-ai-logging      = { path = "../../../utils/xr-ai-logging", editable = true }
xr-ai-models       = { path = "../../../agent-sdk/xr-ai-models", editable = true }
xr-ai-voicegate    = { path = "../../../utils/xr-ai-voicegate", editable = true }

[project.scripts]
simple_vlm_example_worker = "simple_vlm_example_worker:run"

[tool.hatch.build.targets.wheel]
only-include = [
    "simple_vlm_example_worker.py",
    "agent.py",
    "pixels.py",
]
